# core

./: .gitignore  .release-please-manifest.json  Cargo.toml  README.md  context7.json  flake.nix  release-please-config.json
.github/: dependabot.yml
.github/workflows/: build.yml  release-please.yml  release.yml  test.yml
core/: CHANGELOG.md  Cargo.toml  build.rs
core/src/: cache.rs  cli.rs  config.rs  fs.rs  main.rs  net.rs  theme.rs
core/src/cmd/: build.rs  dev.rs  init.rs  mod.rs  new.rs  plugin.rs  preview.rs  seo.rs  theme.rs
core/src/cmd/dev/: handlers.rs  mod.rs  server.rs  watcher.rs
core/src/converter/: html.rs  meta.rs
core/src/plugin/: ffi.rs  manifest.rs  mod.rs  sandbox.rs
core/src/resources/templates/: base.html  default.html  rss.xml
core/src/schema/: mod.rs
core/src/shared/: metadata.rs  mod.rs  render.rs
core/src/shortcode/: mod.rs
core/src/tera/: mod.rs
docs/: norgolith.toml
docs/content/: index.norg
docs/content/docs/: configuration.norg  contributing.norg  getting-started.norg  index.norg  installation.norg  mcp.norg  plugins.norg  templating-migration.norg  templating.norg
docs/content/posts/: index.norg  release-1.0.norg
docs/theme/assets/css/: styles.min.css  tailwind.css
docs/theme/templates/: base.html  categories.html  home.html  posts.html
docs/theme/templates/partials/: footer.html
norgolith-mcp/: CHANGELOG.md  Cargo.toml  README.md  build.rs
norgolith-mcp/src/: main.rs
scripts/: update-robots-presets.sh
sdk/: CHANGELOG.md  Cargo.toml  README.md
sdk/src/: lib.rs
(+1 files in other folders)
