[package]
name = "norgolith-plugin-sdk"
version = "1.0.0"
edition = "2024"
authors = ["NTBBloodbath <bloodbathalchemist@protonmail.com"]
license = "GPL-2.0"
readme = "README.md"
description = "SDK for building Norgolith plugins"
repository = "https://github.com/norgolith/core"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
